--- a/Ex_Modern_Dashboard/app/src/main/res/layout/activity_clothing.xml
+++ b/Ex_Modern_Dashboard/app/src/main/res/layout/activity_clothing.xml
@@ -20,10 +20,12 @@
         android:textSize="36sp" />
 
     <ImageView
+        android:id="@+id/clothImage"
         android:layout_width="500dp"
         android:layout_height="500dp"
-        android:id="@+id/clothImage"
         android:layout_below="@id/clothTitle"
-        android:src="@drawable/clothing"/>
+        android:contentDescription="@string/clothing"
+        android:onClick="troVeTrangChu"
+        android:src="@drawable/clothing" />
 
 </RelativeLayout>
