--- a/TiniChat/app/src/main/res/values/themes.xml
+++ b/TiniChat/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TiniChat" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.TiNiChat" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/primary</item>
     </style>
 
-    <style name="Theme.TiniChat" parent="Base.Theme.TiniChat" />
+    <style name="Theme.TiNiChat" parent="Base.Theme.TiNiChat" />
 </resources>
