--- a/TiNiChat/app/src/main/res/layout/item_container_recent_conversion.xml
+++ b/TiNiChat/app/src/main/res/layout/item_container_recent_conversion.xml
@@ -51,4 +51,14 @@
         app:layout_constraintStart_toEndOf="@id/imageProfile"
         app:layout_constraintTop_toBottomOf="@id/viewSupporter" />
 
+    <TextView
+        android:id="@+id/textDateTime"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_4sdp"
+        android:textColor="@color/secondary_text"
+        android:textSize="@dimen/_8ssp"
+        app:layout_constraintStart_toStartOf="@id/textRecentMessage"
+        app:layout_constraintTop_toBottomOf="@id/textRecentMessage" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
